Seed Data from API

--- a/Bookstore-Backend/Gemfile
+++ b/Bookstore-Backend/Gemfile
@@ -25,3 +25,8 @@ gem "pry"
 # Used to generate seed data
 # https://github.com/faker-ruby/faker
 gem "faker", "~> 2.18"
+
+# Used to make network requests
+# https://github.com/rest-client/rest-client
+gem "rest-client", "~> 2.1"
+
