Updated various files

--- a/Bookstore-Backend/Gemfile
+++ b/Bookstore-Backend/Gemfile
@@ -25,3 +25,15 @@ gem "pry"
 # Used to generate seed data
 # https://github.com/faker-ruby/faker
 gem "faker", "~> 2.18"
+
+# Automatically reload when there are changes
+# https://github.com/alexch/rerun
+  gem "rerun"
+
+# Rack middleware. Used specifically for parsing the request body into params.
+# https://github.com/rack/rack-contrib
+gem "rack-contrib", "~> 2.3"
+
+# More Rack middleware! Used to handle CORS requests
+# https://github.com/cyu/rack-cors
+gem "rack-cors", "~> 1.1"
