--- a/Bookstore-Backend/Rakefile
+++ b/Bookstore-Backend/Rakefile
@@ -22,3 +22,7 @@ task :console do
   ActiveRecord::Base.logger = Logger.new(STDOUT)
   Pry.start
 end
+desc "Start the server"
+task :server do
+  exec "rerun -b 'rackup config.ru'"
+end
