--- a/Bookstore-Backend/Gemfile
+++ b/Bookstore-Backend/Gemfile
@@ -48,3 +48,6 @@ gem "rest-client", "~> 2.1"
 # https://github.com/cyu/rack-cors
 gem "rack-cors", "~> 1.1"
 
+# A fast and simple web server
+# https://github.com/macournoyer/thin
+gem "thin", "~> 1.8"
